Make sure footer does not overlap with nav

--- a/web/content/css/_asciidoc.scss
+++ b/web/content/css/_asciidoc.scss
@@ -828,7 +828,8 @@ body.toc2 #header>h1:nth-last-child(2) {
 #footer {
   max-width: none;
   background: rgb(2, 93, 140);
-  padding: 1.25em
+  padding: 1.25em;
+  margin-left: 2em
 }
 
 #footer-text {
